<resources>
    <string name="app_name" translatable="false">PolyPus</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="inicio_de_sesion">Inicio de sesión</string>
    <string name="iniciar_sesion">iniciar sesion</string>
    <string name="smart_finance">smart finance</string>
    <string name="registrarse">Registrarse</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="prefs">com.PolyPus.PREFERENCE_FILE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="total">Total</string>
    <string name="_000_000_00">$000,000.00</string>
    <string name="ingresos">Ingresos</string>
    <string name="_000_0">$000.0</string>
    <string name="transacci_n">Transacción</string>
    <string name="_000_00">$000.00</string>
    <string name="send">Enviar</string>
    <string name="recibir">Recibir</string>
    <string name="convertir">Convertir</string>
    <string name="transferencia_rapida">Transferencia rapida</string>
    <string name="ver_m_s">Ver más</string>
    <string name="enviar">enviar</string>
    <string name="Enviar">Enviar</string>
    <string name="Recibir">Recibir</string>
    <string name="Convertir">Convertir</string>
</resources>